fixed weird skill circles on smaller screen. Made skills button in home page green cause it looks better imo

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -993,10 +993,15 @@ body.loaded .loader {
 .skill-info {
     background-color: pink;
     border-radius: 5px;
-    height: 80px;
-    padding: 10px 100px 10px 10px;
+    height: 90px;
+    width: 200px;
     color: white;
+    padding: 10px;
 }
+
+    .skill-info small {
+        font-size: 0.7em;
+    }
 
 .right i {
     left: -20px;
